--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.3.4",
+    "classcat": "^5.0.4",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
