--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.3.0",
-    "@rainbow-me/rainbowkit-siwe-next-auth": "^0.3.4",
+    "@rainbow-me/rainbowkit-siwe-next-auth": "0.1.8",
     "classcat": "^5.0.4",
+    "ethers": "^5.7.2",
     "next": "14.0.3",
+    "next-auth": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
+    "siwe": "^1.1.6",
     "viem": "^1.19.11",
     "wagmi": "^1.4.7"
   },
