--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@rainbow-me/rainbowkit-siwe-next-auth": "0.1.8",
     "classcat": "^5.0.4",
@@ -17,6 +18,7 @@
     "next-auth": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "siwe": "^1.1.6",
     "viem": "^1.19.11",
     "wagmi": "^1.4.7"
