--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethers": "^5.7.2",
     "next": "14.0.3",
     "next-auth": "^4.20.1",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
