--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@headlessui/react": "^1.7.17",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@rainbow-me/rainbowkit-siwe-next-auth": "0.1.8",
+    "axios": "^1.6.7",
     "classcat": "^5.0.4",
+    "dotenv": "^16.4.1",
     "ethers": "^5.7.2",
     "next": "14.0.3",
     "next-auth": "^4.20.1",
