--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^1.7.17",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@rainbow-me/rainbowkit-siwe-next-auth": "0.1.8",
+    "@typescript-eslint/eslint-plugin": "5.54.1",
+    "eslint-plugin-unused-imports": "2.0.0",
     "classcat": "^5.0.4",
     "ethers": "^5.7.2",
     "next": "14.0.3",
