fix: Update .env.example with subgraph infos

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,14 @@ NEXT_PUBLIC_ALCHEMY_SEPOLIA_KEY=
 NEXT_PUBLIC_ALCHEMY_MUMBAI_HTTP=
 NEXT_PUBLIC_ALCHEMY_MUMBAI_KEY=
 NEXT_PUBLIC_ALCHEMY_ETHEREUM_HTTP=
+
+#Subgraph endpoint production query
+
+#ENDPOINT_URL=https://gateway.testnet.thegraph.com/api/[api-key]/subgraphs/id/EynHJVht9r6xhaZEPCyLYLd4EqBq8msf4jTrw1Vwg8ZV
+
+
+#Subgraph endpoint production query
+
+ENDPOINT_URL=https://api.studio.thegraph.com/query/57887/swaplace-subgraph-sepolia/v0.0.1
+
+AUTHORIZATION_KEY=3b2048f02febad918a35bbafe78b2115
