--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@rainbow-me/rainbowkit-siwe-next-auth": "0.1.8",
     "@typescript-eslint/eslint-plugin": "5.54.1",
+    "axios": "^1.6.7",
     "eslint-plugin-unused-imports": "2.0.0",
     "classcat": "^5.0.4",
     "ethers": "^5.7.2",
@@ -36,6 +37,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/parser": "^6.13.1",
     "autoprefixer": "^10.0.1",
+    "dotenv": "^16.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
