fix: ENDPOINT_URL is now pointing to the correct subgraph. The previous one as pointing to a test subgraph

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,6 @@ NEXT_PUBLIC_ALCHEMY_ETHEREUM_HTTP=
 
 #Subgraph endpoint production query
 
-ENDPOINT_URL=https://api.studio.thegraph.com/query/57887/swaplace-subgraph-sepolia/v0.0.1
+ENDPOINT_URL=https://api.studio.thegraph.com/query/57887/swaplace-subgraph-sepolia/version/latest
 
 AUTHORIZATION_KEY=3b2048f02febad918a35bbafe78b2115
