--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@headlessui-float/react": "^0.13.0",
     "@headlessui/react": "^1.7.17",
-    "@rainbow-me/rainbowkit": "^1.3.0",
+    "@rainbow-me/rainbowkit": "1.0.4",
     "@rainbow-me/rainbowkit-siwe-next-auth": "0.1.8",
     "classcat": "^5.0.4",
     "ethers": "^5.7.2",
