Rolled back eslint config file changes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,11 @@
-module.exports = {
-  plugins: ["@typescript-eslint", "unused-imports"],
-  extends: [
+{
+  "plugins": ["@typescript-eslint", "unused-imports"],
+  "extends": [
     "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended",
     "plugin:import/recommended"
   ],
-  rules: {
+  "rules": {
     "@typescript-eslint/no-unused-vars": [
       "error",
       { "ignoreRestSiblings": true }
