--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --config .eslintrc"
   },
   "dependencies": {
     "@headlessui-float/react": "^0.13.0",
@@ -39,8 +39,8 @@
     "@typescript-eslint/parser": "^6.13.1",
     "autoprefixer": "^10.0.1",
     "dotenv": "^16.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint": "8.7.0",
+    "eslint-config-next": "13.4.19",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
