--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 # Default owners for everything in the repo
 
-* @FrancoAguzzi @heronlancellot @eduramme
+- @FrancoAguzzi @heronlancellot @eduramme @0xneves
