fix: remove endpoint from usePonder & add in env

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,4 @@ NEXT_PUBLIC_ALCHEMY_ARBITRUMSEPOLIA_KEY=
 NEXT_PUBLIC_ENDPOINT_URL=https://api.studio.thegraph.com/query/57887/swaplace-subgraph-sepolia/version/latest
 
 NEXT_PUBLIC_SUBGRAPH_AUTH_KEY=3b2048f02febad918a35bbafe78b2115
+NEXT_PUBLIC_PONDER_ENDPOINT=""
