--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@rainbow-me/rainbowkit-siwe-next-auth": "0.1.8",
     "@typescript-eslint/eslint-plugin": "5.54.1",
+    "@wagmi/core": "^2.6.9",
     "alchemy-sdk": "^3.1.2",
     "axios": "^1.6.7",
     "boring-avatars": "1.7.0",
@@ -26,6 +27,7 @@
     "next": "14.0.3",
     "next-auth": "^4.20.1",
     "next-themes": "^0.2.1",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
@@ -39,7 +41,6 @@
     "access": "public"
   },
   "devDependencies": {
-    "semantic-release": "23.0.2",
     "@types/node": "^20",
     "@types/node-fetch": "^2.6.9",
     "@types/react": "^18",
@@ -50,6 +51,7 @@
     "eslint": "8.7.0",
     "eslint-config-next": "13.4.19",
     "postcss": "^8",
+    "semantic-release": "23.0.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
