--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^1.7.17",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@rainbow-me/rainbowkit-siwe-next-auth": "0.1.8",
+    "@types/prop-types": "^15.7.11",
     "@typescript-eslint/eslint-plugin": "5.54.1",
     "@wagmi/core": "^2.6.9",
     "alchemy-sdk": "^3.1.2",
