--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.17",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@rainbow-me/rainbowkit-siwe-next-auth": "0.1.8",
+    "@tanstack/react-query": "^5.28.8",
     "@typescript-eslint/eslint-plugin": "5.54.1",
     "alchemy-sdk": "^3.1.2",
     "axios": "^1.6.7",
